--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
+    "@vueuse/components": "^10.7.2",
+    "@vueuse/core": "^10.7.2",
     "@yeger/vue-masonry-wall": "^5.0.6",
     "pinia": "^2.1.7",
     "uuid": "^9.0.1",
     "vue": "^3.3.11",
+    "vue-material-design-icons": "^5.2.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
