--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
+    "@types/uuid": "^9.0.7",
     "@vueuse/components": "^10.7.2",
     "@vueuse/core": "^10.7.2",
     "@yeger/vue-masonry-wall": "^5.0.6",
